--- a/index.html
+++ b/index.html
@@ -3,102 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="shrink-to-fit=no, initial-ratio=1, width=device-width">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 </head>
 
 
 <body>
 
+<style>
+body{
+    font-family:"Roboto",sans-serif;
+}
+</style>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a href="#" class="navbar-brand"><strong>MW</strong></a>
-    <button type="button" data-toggle="collapse" data-target="#dropdown" class="navbar-toggler">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse" id="dropdown">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Samples</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-        </ul>
-    </div>
-</nav>
-
-<main>
-    <div class="container-flex">
-        <div class="row">
-            <br>
-            <div class="col-sm">
-                <table class="table">
-                    <thead class="thead">
-                        <tr>
-                            <th scope="col">Service</th>
-                            <th scope="col">Timeline</th>    
-                            <th scope="col">Difficulty</th>
-                        </tr>
-                    <tbody>
-                        <tr>
-                            <td scope="row">Web Development</td>
-                            <td scoep="row">3 months</td>
-                            <td scope="row">Medium</td>
-                        </tr>
-                        <tr>
-                            <td scope="row">Database Development</td>
-                            <td scoep="row">4 months</td>
-                            <td scope="row">Hard</td>
-                        </tr>
-                        <tr>
-                            <td scope="row">Dashboard KPI Development</td>
-                            <td scoep="row">2 months</td>
-                            <td scope="row">Easy</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-sm">
-                <p class="h4" style="font-weight:300;">Charts<p>
-                <div class="card-deck">
-                    <div class="card" style="min-width:400px;">
-                        <div class="card-header">
-                            <p class="h6" style="font-weight:300;">Line Chart</p>
-                        </div>
-                        <div class="card-body" id="kpi_area">
-                          <!--  <svg height="100px" width="200px" style="background-color:grey;" id="line_chart"></svg>-->
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <p class="h6" style="font-weight:300;">Bar Chart</p>
-                        </div>
-                        <div class="card-body" id="kpi_area_2">
-                            <!--<svg height="100px" width="300px" style="background-color:grey;" id="bar_chart"></svg>-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</main>
-
-
-
-<footer class="text-center">
-    <br>
-    <p>Copyright 2019</p>
-</footer>
-
-<!-- JavaScript libraries -->
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<div id="kpi_area"></div>
 
 <script>
 
@@ -113,7 +29,6 @@ class KPI{
         this.side_padding = side_padding || 15;
         this.text_orientation = text_orientation || "right";
 
-        //Non initial text parameters
         var text, subtext, text_color, measure_font_size, measure_desc_font_size;
         this.text = text || "0,000";
         this.subtext = subtext || "measure name";
@@ -121,16 +36,14 @@ class KPI{
         this.measure_font_size = measure_font_size || 38;
         this.measure_desc_font_size = measure_desc_font_size || 20;
 
-        //Grid
         var kpi_area, left, right, third;
-
-        //var area_id = "kpi_area";
 
     }
     insertInto(id){
         this.kpi_area = document.createElementNS("http://www.w3.org/2000/svg","svg");
         this.kpi_area.setAttribute("width", this.width + "px");
         this.kpi_area.setAttribute("height", this.height + "px");
+        this.kpi_area.setAttribute("id", "kpi_chart");
         this.kpi_area.setAttribute("style","background-color:" + this.color + ";)");
 
         this.set_grid(this.top_padding, this.side_padding, this.width);
@@ -187,10 +100,188 @@ class KPI{
 
 }
 
-var kpi_1 = new KPI(100, 300, "#4E9231");
+function ArrowMeasure(x, y){
+    var path = document.createElementNS("http://www.w3.org/2000/svg", "path");
+
+    this.color = (function(color_){
+        color = color_;
+        this.buildPath();
+    });        
+    this.head_height = (function(height){
+        arrow_height = height;
+        this.buildPath();
+    });        
+    this.head_width = (function(width){
+        arrow_width = width;
+        this.buildPath();
+    });        
+    this.body_height = (function(b_height){
+        body_height = b_height;
+        this.buildPath();
+    });        
+    this.angle = (function(angle){
+        rotation_degree = angle;
+        this.buildPath();
+    });
+    this.body_width_sides = (function(b_sides){
+        body_width_sides = b_sides;
+        this.buildPath();
+    });
+
+
+    this.buildPath = (function(){
+        if (typeof body_width_sides === 'undefined'){
+            body_width_sides = 0;
+        }
+        if (typeof body_height === 'undefined'){
+            body_height = "0";
+        }
+        if (typeof arrow_width === 'undefined'){
+            arrow_width = 10;
+        }
+        if (typeof arrow_height === 'undefined'){
+            arrow_height = "5";
+        }
+        if (typeof rotation_degree === 'undefined'){
+            rotation_degree = "0";
+        }
+        if (typeof color === 'undefined'){
+            color = "black";
+        }
+        path.setAttribute("id","arrow");
+        path.setAttribute("stroke","black");
+        path.setAttribute("stroke-width","0");
+        path.setAttribute("fill",color);
+        switch(rotation_degree){
+            case "up":
+                rotation_degree="0";
+                break;
+            case "right":
+                rotation_degree="90";
+                break;
+            case "down":
+                rotation_degree="180";
+                break;
+            case "left":
+                rotation_degree="270";
+                break;
+            case "top-right":
+                rotation_degree="45";
+                break;
+            case "down-right":
+                rotation_degree="135";
+                break;
+            case "down-left":
+                rotation_degree="225";
+                break;
+            case "top-left":
+                rotation_degree="315";
+                break;
+            default:
+                rotation_degree=rotation_degree;
+                break;
+        }
+        var x1 = x - (arrow_width/2);
+        var x2 = x1 + arrow_width;
+        var x3 = (arrow_width/2) + x1;
+        var y1 = y + (arrow_height/2);
+        var y2 = y1;
+        var y3 = y1 - arrow_height;
+        var x4 = x1;
+        var y4 = y1;
+
+        var arrow_body_height = body_height;
+
+        //Arrow Thickness
+        var x5 = x1 + body_width_sides;
+        var y5 = y1;
+        var x6 = x5;
+        var y6 = y1+arrow_body_height;
+
+        var x7 = x2 - body_width_sides;
+        var y7 = y6;
+        var x8 = x7;
+        var y8 = y1;
+
+        var path_coordinates = "M " +x1+ " " +y1+ " L " +x2+ " " +y2+ " L " + x3 + " " + y3 + " L " + x4 + " " + y4 + " L " + x5 + " " + y5 + " L " + x6 + " " + y6 + " L " + x7 + " " + y7 + " L " + x8 + " " + y8;
+        var x_center_coordinates = x1 + (arrow_width/2);
+        var y_center_coordinates = y3 + (arrow_height/2);
+
+        path.setAttribute("d", path_coordinates);
+        path.setAttribute("transform", "rotate(" + rotation_degree + " " + x_center_coordinates + " " + y_center_coordinates + ")");
+
+    });
+
+
+    this.buildPath();
+
+    this.addTo = (function(svgID){
+        var svg_area = document.getElementById(svgID);
+        svg_area.append(path);
+    });
+}
+
+
+//Themes
+//kpi #448d25 arrow white
+//kpi #76b75b arrow 509c2f 
+//kpi #3bac0c arrow white 
+
+var kpi_1 = new KPI(100, 300, "#448d25");
 kpi_1.text = "41,000";
 kpi_1.subtext = "Amount of sales";
 kpi_1.insertInto("kpi_area");
+
+
+
+var arrow = new ArrowMeasure(38, 23);
+arrow.color("white");
+arrow.angle(0);
+arrow.head_height(20);
+arrow.head_width(55);
+arrow.body_height(50);
+arrow.body_width_sides(11);
+arrow.addTo("kpi_chart");
+
+var small_arrow = new ArrowMeasure(70, 50);
+small_arrow.color("white");
+small_arrow.angle("left");
+small_arrow.head_height(8);
+small_arrow.head_width(13);
+small_arrow.body_height(0);
+small_arrow.addTo("kpi_chart");
+
+var arrow = new ArrowMeasure(38, 23);
+arrow.color("white");
+arrow.angle(0);
+arrow.head_height(20);
+arrow.head_width(55);
+arrow.body_height(50);
+arrow.body_width_sides(11);
+arrow.addTo("kpi_chart");
+
+var baseline = document.createElementNS("http://www.w3.org/2000/svg","path");
+baseline.setAttribute("stroke", "#448d25");
+baseline.setAttribute("stroke-width", "3");
+baseline.setAttribute("d", "M 21 50 L 55 50");
+var svgArea = document.getElementById("kpi_chart");
+svgArea.append(baseline);
+
+
+/*
+//kpi_1 = new KPI(100, 300, "#448d25");
+kpi_1.text = "50,000";
+kpi_1.color = "grey";
+kpi_1.subtext = "Amount of sales";
+kpi_1.insertInto("kpi_area_2");
+
+
+
+
+
+
+*/
+
 
 </script>
 
